wundergraph/cosmoPlatformIngress.yaml
#STUDIO
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: studio-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress  
  servers:
    - port:
        number: 80          
        name: http
        protocol: HTTP
      hosts:
        - "studio.wundergraph.local"   
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: studio
  namespace: istio-ingress
spec:
  hosts:
    - "studio.wundergraph.local"       
  gateways:
    - studio-gateway         
  http:
    - match:
        - uri:
            prefix: /       
      route:
        - destination:
            host: cosmo-studio.cosmo.svc.cluster.local     
            port:
              number: 3000
---
#CONTROLPLANE
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: controlplane-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress  
  servers:
    - port:
        number: 80          
        name: http
        protocol: HTTP
      hosts:
        - "controlplane.example.com"   
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: controlplane
  namespace: istio-ingress
spec:
  hosts:
    - "controlplane.example.com"       
  gateways:
    - controlplane-gateway         
  http:
    - match:
        - uri:
            prefix: /       
      route:
        - destination:
            host: cosmo-controlplane.cosmo.svc.cluster.local     
            port:
              number: 3001
---
#ROUTER
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: router-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress  
  servers:
    - port:
        number: 80          
        name: http
        protocol: HTTP
      hosts:
        - "router.wundergraph.local"   
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: router
  namespace: istio-ingress
spec:
  hosts:
    - "router.wundergraph.local"       
  gateways:
    - router-gateway         
  http:
    - match:
        - uri:
            prefix: /       
      route:
        - destination:
            host: router.cosmo.svc.cluster.local     
            port:
              number: 3002
---
#GRAPHQLMETRICS
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: graphqlmetrics-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress  
  servers:
    - port:
        number: 80          
        name: http
        protocol: HTTP
      hosts:
        - "graphqlmetrics.wundergraph.local"   
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: graphqlmetrics
  namespace: istio-ingress
spec:
  hosts:
    - "graphqlmetrics.wundergraph.local"       
  gateways:
    - graphqlmetrics-gateway         
  http:
    - match:
        - uri:
            prefix: /       
      route:
        - destination:
            host: graphqlmetrics.cosmo.svc.cluster.local     
            port:
              number: 4005
---
#CDN
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cosmo-cdn-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress  
  servers:
    - port:
        number: 80          
        name: http
        protocol: HTTP
      hosts:
        - "cdn.wundergraph.local"   
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cosmo-cdn
  namespace: istio-ingress
spec:
  hosts:
    - "cdn.wundergraph.local"       
  gateways:
    - cosmo-cdn-gateway         
  http:
    - match:
        - uri:
            prefix: /       
      route:
        - destination:
            host: cosmo-cdn.cosmo.svc.cluster.local     
            port:
              number: 8787
