wundergraph/routerIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress
  namespace: cosmo
  annotations:
    nginx.org/websocket-services: "router"
spec:
  ingressClassName: nginx
  rules:
  - host: router.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router
            port:
              number: 3002
